--- a/MateringObhectDetection_training.ipynb
+++ b/MateringObhectDetection_training.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM47o/h9vciRdU3L3m1JB+w",
+      "authorship_tag": "ABX9TyNuEUTE+S4oFN/eHwcYaa7N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,9 +334,377 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "current_dir"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "jTgoFWAZHJHo",
+        "outputId": "50336b72-615e-46b4-a5a7-26416b523c93"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/gdrive/MyDrive'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#train test record path\n",
+        "train_record_path = os.path.join(current_dir,'birdsod','train','train.record')\n",
+        "test_record_path = os.path.join(current_dir,'birdsod','test','test.record')\n",
+        "label_map_path = '/content/gdrive/MyDrive/models/research/label_map.pbtxt'"
+      ],
+      "metadata": {
+        "id": "j_F_rlRiN2YE"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Config files, checkpoints and hyperparameter"
+      ],
+      "metadata": {
+        "id": "hT1R03wmOrhh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Load the last checkpoint if it exists\n",
+        "fine_tune_checkpoint_fastercnn = 'faster_rcnn_resnet101_v1_640x640_coco17_tpu-8/checkpoint/ckpt-0'\n",
+        "print('Checkpoint Dir for FasterRCNN:', fine_tune_checkpoint_fastercnn)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z9mxtk-UOu4a",
+        "outputId": "b6b77b2c-0afc-4083-91ea-d99a2881617e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checkpoint Dir for FasterRCNN: faster_rcnn_resnet101_v1_640x640_coco17_tpu-8/checkpoint/ckpt-0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hyperparameters\n",
+        "if os.path.isfile('pipeline.config'):\n",
+        "  !rm 'pipeline.config'\n",
+        "\n",
+        "#Download the pipeline\n",
+        "!wget https://raw.githubusercontent.com/ayoubbensakhria/ObjectDetectionFRCNN/master/faster_rcnn_resnet101/pipeline.config\n",
+        "\n",
+        "#set config file variables\n",
+        "base_config_path_fasterrcnn= 'pipeline.config'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JU9SdSe9PzV3",
+        "outputId": "b5340cc8-8e10-40f1-9394-83d43fbeb553"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-04-08 01:22:42--  https://raw.githubusercontent.com/ayoubbensakhria/ObjectDetectionFRCNN/master/faster_rcnn_resnet101/pipeline.config\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3834 (3.7K) [text/plain]\n",
+            "Saving to: ‘pipeline.config’\n",
+            "\n",
+            "pipeline.config     100%[===================>]   3.74K  --.-KB/s    in 0.003s  \n",
+            "\n",
+            "2024-04-08 01:22:42 (1.16 MB/s) - ‘pipeline.config’ saved [3834/3834]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Hyperparameters\n"
+      ],
+      "metadata": {
+        "id": "Sc_1KDRWTbbP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def edit_config(model_name, base_config_path, fine_tune_checkpoint):\n",
+        "    with open(base_config_path) as f:\n",
+        "        config = f.read()\n",
+        "    with open('{model}_config.config'.format(model=model_name), 'w') as f:\n",
+        "        #set labelmap path\n",
+        "        config = re.sub('label_map_path: \".*?\"',\n",
+        "                        'label_map_path: \"{}\"'.format(label_map_path), config)\n",
+        "\n",
+        "        #set fine tune checkpoint path\n",
+        "        config = re.sub('fine_tune_checkpoint: \".*?\"',\n",
+        "                    'fine_tune_checkpoint: \"{}\"'.format(fine_tune_checkpoint), config)\n",
+        "\n",
+        "        #set train tf-record file path\n",
+        "        config = re.sub('(input_path: \".*?)(PATH_TO_BE_CONFIGURED/train)(.*?\")',\n",
+        "                     'input_path: \"{}\"'.format(train_record_path), config)\n",
+        "\n",
+        "        #set test tf-record file path\n",
+        "        config = re.sub('(input_path: \".*?)(PATH_TO_BE_CONFIGURED/test)(.*?\")',\n",
+        "                     'input_path: \"{}\"'.format(test_record_path), config)\n",
+        "\n",
+        "        #set number of classes\n",
+        "        config = re.sub('num_classes: [0-9]+',\n",
+        "                    'num_classes: {}'.format(4), config)\n",
+        "\n",
+        "        #set batch size\n",
+        "        config = re.sub('batch_size: [0-9]+',\n",
+        "                    'batch_size: {}'.format(BATCH_SIZE), config)\n",
+        "\n",
+        "        #set training steps\n",
+        "        config = re.sub('num_steps: [0-9]+',\n",
+        "                    'num_steps: {}'.format(NUM_STEPS), config)\n",
+        "\n",
+        "        #set up finetune checkpoint type to detection\n",
+        "        config = re.sub('fine_tune_checkpoint_type: \"classification\"',\n",
+        "                'fine_tune_checkpoint_type: \"{}\"'.format('detection'), config)\n",
+        "        f.write(config)\n"
+      ],
+      "metadata": {
+        "id": "F1C4VH6MTNZS"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Edit config of faster rcnn using the above function\n",
+        "edit_config('fasterrcnn', base_config_path_fasterrcnn, fine_tune_checkpoint_fastercnn)\n",
+        "\n",
+        "#Clean up\n",
+        "!rm 'pipeline.config'\n",
+        "\n",
+        "#print pipeline config\n",
+        "%cat 'fasterrcnn_config.config'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCkOgsNfXJNo",
+        "outputId": "a2158c9c-98d9-4c2f-aee4-1f86b2f02152"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# Faster R-CNN with Resnet-101 (v1)\n",
+            "# Trained on COCO, initialized from Imagenet classification checkpoint\n",
+            "\n",
+            "# This config is TPU compatible.\n",
+            "\n",
+            "model {\n",
+            "  faster_rcnn {\n",
+            "    num_classes: 4\n",
+            "    image_resizer {\n",
+            "      fixed_shape_resizer {\n",
+            "        width: 640\n",
+            "        height: 640\n",
+            "      }\n",
+            "    }\n",
+            "    feature_extractor {\n",
+            "      type: 'faster_rcnn_resnet101_keras'\n",
+            "      batch_norm_trainable: true\n",
+            "    }\n",
+            "    first_stage_anchor_generator {\n",
+            "      grid_anchor_generator {\n",
+            "        scales: [0.25, 0.5, 1.0, 2.0]\n",
+            "        aspect_ratios: [0.5, 1.0, 2.0]\n",
+            "        height_stride: 16\n",
+            "        width_stride: 16\n",
+            "      }\n",
+            "    }\n",
+            "    first_stage_box_predictor_conv_hyperparams {\n",
+            "      op: CONV\n",
+            "      regularizer {\n",
+            "        l2_regularizer {\n",
+            "          weight: 0.0\n",
+            "        }\n",
+            "      }\n",
+            "      initializer {\n",
+            "        truncated_normal_initializer {\n",
+            "          stddev: 0.01\n",
+            "        }\n",
+            "      }\n",
+            "    }\n",
+            "    first_stage_nms_score_threshold: 0.0\n",
+            "    first_stage_nms_iou_threshold: 0.7\n",
+            "    first_stage_max_proposals: 300\n",
+            "    first_stage_localization_loss_weight: 2.0\n",
+            "    first_stage_objectness_loss_weight: 1.0\n",
+            "    initial_crop_size: 14\n",
+            "    maxpool_kernel_size: 2\n",
+            "    maxpool_stride: 2\n",
+            "    second_stage_box_predictor {\n",
+            "      mask_rcnn_box_predictor {\n",
+            "        use_dropout: false\n",
+            "        dropout_keep_probability: 1.0\n",
+            "        fc_hyperparams {\n",
+            "          op: FC\n",
+            "          regularizer {\n",
+            "            l2_regularizer {\n",
+            "              weight: 0.0\n",
+            "            }\n",
+            "          }\n",
+            "          initializer {\n",
+            "            variance_scaling_initializer {\n",
+            "              factor: 1.0\n",
+            "              uniform: true\n",
+            "              mode: FAN_AVG\n",
+            "            }\n",
+            "          }\n",
+            "        }\n",
+            "        share_box_across_classes: true\n",
+            "      }\n",
+            "    }\n",
+            "    second_stage_post_processing {\n",
+            "      batch_non_max_suppression {\n",
+            "        score_threshold: 0.0\n",
+            "        iou_threshold: 0.6\n",
+            "        max_detections_per_class: 100\n",
+            "        max_total_detections: 300\n",
+            "      }\n",
+            "      score_converter: SOFTMAX\n",
+            "    }\n",
+            "    second_stage_localization_loss_weight: 2.0\n",
+            "    second_stage_classification_loss_weight: 1.0\n",
+            "    use_static_shapes: true\n",
+            "    use_matmul_crop_and_resize: true\n",
+            "    clip_anchors_to_image: true\n",
+            "    use_static_balanced_label_sampler: true\n",
+            "    use_matmul_gather_in_matcher: true\n",
+            "  }\n",
+            "}\n",
+            "\n",
+            "train_config: {\n",
+            "  batch_size: 1\n",
+            "  sync_replicas: true\n",
+            "  startup_delay_steps: 0\n",
+            "  replicas_to_aggregate: 8\n",
+            "  num_steps: 2100\n",
+            "  optimizer {\n",
+            "    momentum_optimizer: {\n",
+            "      learning_rate: {\n",
+            "        cosine_decay_learning_rate {\n",
+            "          learning_rate_base: .0004\n",
+            "          total_steps: 100000\n",
+            "          warmup_learning_rate: .00004\n",
+            "          warmup_steps: 2000\n",
+            "        }\n",
+            "      }\n",
+            "      momentum_optimizer_value: 0.9\n",
+            "    }\n",
+            "    use_moving_average: false\n",
+            "  }\n",
+            "  fine_tune_checkpoint_version: V2\n",
+            "  fine_tune_checkpoint: \"faster_rcnn_resnet101_v1_640x640_coco17_tpu-8/checkpoint/ckpt-0\"\n",
+            "  fine_tune_checkpoint_type: \"detection\"\n",
+            "  data_augmentation_options {\n",
+            "    random_horizontal_flip {\n",
+            "    }\n",
+            "  }\n",
+            "\n",
+            "  data_augmentation_options {\n",
+            "    random_adjust_hue {\n",
+            "    }\n",
+            "  }\n",
+            "\n",
+            "  data_augmentation_options {\n",
+            "    random_adjust_contrast {\n",
+            "    }\n",
+            "  }\n",
+            "\n",
+            "  data_augmentation_options {\n",
+            "    random_adjust_saturation {\n",
+            "    }\n",
+            "  }\n",
+            "\n",
+            "  data_augmentation_options {\n",
+            "     random_square_crop_by_scale {\n",
+            "      scale_min: 0.6\n",
+            "      scale_max: 1.3\n",
+            "    }\n",
+            "  }\n",
+            "  max_number_of_boxes: 100\n",
+            "  unpad_groundtruth_tensors: false\n",
+            "  use_bfloat16: false  # works only on TPUs\n",
+            "}\n",
+            "\n",
+            "train_input_reader: {\n",
+            "  label_map_path: \"/content/gdrive/MyDrive/models/research/label_map.pbtxt\"\n",
+            "  tf_record_input_reader {\n",
+            "    input_path: \"/content/gdrive/MyDrive/birdsod/train/train.record\"\n",
+            "  }\n",
+            "}\n",
+            "\n",
+            "eval_config: {\n",
+            "  metrics_set: \"coco_detection_metrics\"\n",
+            "  use_moving_averages: false\n",
+            "  batch_size: 1;\n",
+            "}\n",
+            "\n",
+            "eval_input_reader: {\n",
+            "  label_map_path: \"/content/gdrive/MyDrive/models/research/label_map.pbtxt\"\n",
+            "  shuffle: false\n",
+            "  num_epochs: 1\n",
+            "  tf_record_input_reader {\n",
+            "    input_path: \"PATH_TO_BE_CONFIGURED/val2017-?????-of-00032.tfrecord\"\n",
+            "  }\n",
+            "}"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jTgoFWAZHJHo"
+        "id": "vrqKrxT2YAqs"
       },
       "execution_count": null,
       "outputs": []
